chore: Update .gitignore for Python project

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ MEMO.MD
 \~\$*
 /build/
 /dist/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.env
+.venv
+env/
+ENV/
+*.egg-info/
+.eggs/
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
